--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,7 @@
 ---
 en:
-  decidim:
-    components:
-      privacy:
-        name: Privacy
+  layouts:
+    decidim:
+      user_profile:
+        privacy_settings: Privacy settings
+
