Incomplete popup functionality for the privacy check

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5,6 +5,9 @@ en:
       user_profile:
         privacy_settings: Privacy settings
   decidim:
+    components:
+      privacy:
+        name: Privacy settings
     privacy:
       privacy_settings:
         show:
