--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,6 +20,9 @@ en:
         update:
           error: There was a problem updating your privacy settings.
           success: Your privacy settings were successfully updated.
+      privacy_block:
+        title: Publification of account needed
+        content: "<p class='text-center'>You are trying to access a page which requires your account to be public. Making your profile public allows other users to see information about you.</p><p class='text-center'><strong>Additional information about making your profile public will be presented after clicking the button below.</strong></p>"
       partials:
         privacy_consent:
           make_profile_public: Make your profile public
