--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,6 +4,10 @@ en:
     decidim:
       user_profile:
         privacy_settings: Privacy settings
+      wrapper:
+        public: Your profile is public
+        profile: My public profile
+        message: "Your profile is set as public on this platform and other people can see details about you, such as your name, nickname, profile picture and your public activity on this platform. You can change the visibility of your profile through the privacy settings page. Your profile is available at:"
   decidim:
     components:
       privacy:
