Fix search in 'new conversation', add more conversation system tests, fix start conversation

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,7 +17,7 @@ en:
     messaging:
       conversations:
         show:
-          private_account: You can't have a conversation with private accounts.
+          private_account: You can't have a conversation with an account that is private or has messaging disabled.
     privacy:
       message_block:
         title: Private messaging is not enabled
