Add endorser visibility changes / Add user group listing changes / Add tests /

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,7 +13,8 @@ en:
       privacy:
         name: Privacy settings
     members:
-      no_members: This group doesn't have any public members.
+      no_members: This group doesn't have any members.
+      no_public_members: This group doesn't have any public members.
     messaging:
       conversations:
         show:
