--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,10 +21,10 @@ en:
           private_account: You cannot have a conversation with a private participant.
           private_messaging_disabled: You cannot have a conversation with a participant that has private messaging disabled.
           private_messaging_disabled_new: You cannot start a conversation with a participant that has private messaging disabled.
-          private_messaging_disabled_new_multiple: One or more of the users in this conversation have private messaging disabled, which is why the conversation cannot be started.
+          private_messaging_disabled_new_multiple: One or more of the participants in this conversation have private messaging disabled, which is why the conversation cannot be started.
           private_messaging_disabled_users:
-            one: "The following user has disabled their private messaging:"
-            other: "The following users have disabled their private messaging:"
+            one: "The following participant has disabled their private messaging:"
+            other: "The following participants have disabled their private messaging:"
     privacy:
       message_block:
         title: Private messaging is not enabled
@@ -43,7 +43,7 @@ en:
           success: Your privacy settings were successfully updated.
       privacy_block:
         title: Public profile is required for this action
-        content_html: "<p class='text-center'>You are trying to access a page which requires your profile to be public. Making your profile public allows other users to see information about you.</p><p class='text-center'><strong>Additional information about making your profile public will be presented after clicking the button below.</strong></p>"
+        content_html: "<p class='text-center'>You are trying to access a page which requires your profile to be public. Making your profile public allows other participants to see information about you.</p><p class='text-center'><strong>Additional information about making your profile public will be presented after clicking the button below.</strong></p>"
         button: "Publish your profile"
       partials:
         privacy_consent:
@@ -55,8 +55,8 @@ en:
       publish_account:
         unauthorized: Only participants with public profiles are allowed to perform this action.
     profile:
-      private: Private user
-      private_info_html: <i>This user has decided to make their profile private. New messages to this conversation have been therefore disabled.</i>
+      private: Private participant
+      private_info_html: <i>This participant has decided to make their profile private. New messages to this conversation have been therefore disabled.</i>
 
 
 
