--- a/config/locales/fi.yml
+++ b/config/locales/fi.yml
@@ -45,6 +45,8 @@ fi:
         title: Profiilisi tulee olla julkinen suorittaaksesi tämän toiminnon
         content_html: "<p class='text-center'>Yrität päästä sivulle, joka vaatii julkisen profiilin. Profiilisi julkaiseminen sallii muiden osallistujien nähdä sinua koskevia tietoja.</p><p class='text-center'><strong>Saat lisätietoja profiilisi julkaisemisesta alla olevan painikkeen painamisen jälkeen.</strong></p>"
         button: "Julkaise profiilisi"
+      private_account:
+        unnamed_user: Nimetön osallistuja
       partials:
         privacy_consent:
           make_profile_public: Tee profiilistasi julkinen
@@ -57,7 +59,3 @@ fi:
     profile:
       private: Yksityinen osallistuja
       private_info_html: <i>Tämä osallistuja on päättänyt tehdä profiilistaan yksityisen. Uudet viestit tähän keskusteluun on siksi poistettu käytöstä.</i>
-
-
-
-
