--- a/config/locales/sv.yml
+++ b/config/locales/sv.yml
@@ -45,6 +45,8 @@ sv:
         title: Offentlig profil krävs för denna åtgärd
         content_html: "<p class='text-center'>Du försöker komma åt en sida som kräver att din profil är offentlig. Att göra din profil offentlig tillåter andra deltagare att se information om dig.</p><p class='text-center'><strong>Ytterligare information om att göra din profil offentlig kommer att presenteras efter att klicka på knappen nedan.</strong></p>"
         button: "Publicera din profil"
+      private_account:
+        unnamed_user: Namnlös deltagare
       partials:
         privacy_consent:
           make_profile_public: Gör din profil offentlig
@@ -57,7 +59,3 @@ sv:
     profile:
       private: Privat deltagare
       private_info_html: <i>Denna deltagare har bestämt sig för att göra sin profil privat. Nya meddelanden till denna konversation har därför inaktiverats.</i>
-
-
-
-
