Add asking old password feature

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,9 @@
 ---
 en:
+  activemodel:
+    attributes:
+      user:
+        old_password: Current password
   layouts:
     decidim:
       user_profile:
@@ -59,3 +63,7 @@ en:
     profile:
       private: Private participant
       private_info_html: <i>This participant has decided to make their profile private. New messages to this conversation have been therefore disabled.</i>
+  devise:
+    passwords:
+      edit:
+        old_password_help: In order to confirm the changes to your account, please provide your current password.
