--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,6 +13,8 @@ en:
         profile: My public profile
         message: "Your profile is set as public on this platform and other people can see details about you, such as your name, nickname, profile picture and your public activity on this platform. You can change the visibility of your profile through the privacy settings page. Your profile is available at:"
       shared:
+        layout_two_col:
+          private_account: Private account
         layout_center:
           save_privacy_settings: Save privacy settings
   decidim:
