--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,7 +37,10 @@ en:
     privacy:
       message_block:
         title: Private messaging is not enabled
-        content_html: To access this page you have to enable private messaging from the "Privacy settings" under your profile settings.
+        content_html: |
+          <p class="text-lg pb-4">
+            To access this page you have to enable private messaging from the "Privacy settings" under your profile settings.
+          </p>
         back: Previous page
       privacy_settings:
         show:
@@ -77,11 +80,11 @@ en:
       privacy_block:
         title: Public profile is required for this action
         content_html: |
-          <p class="text-center">
+          <p class="text-lg">
             You are trying to access a page which requires your profile to be public. Making your profile public allows
             other participants to see information about you.
           </p>
-          <p class="text-center">
+          <p class="text-lg py-4">
             <strong>
               Additional information about making your profile public will be presented after clicking the button below.
             </strong>
