--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -13,6 +13,10 @@ en:
         profile: My public profile
         message: "Your profile is set as public on this platform and other people can see details about you, such as your name, nickname, profile picture and your public activity on this platform. You can change the visibility of your profile through the privacy settings page. Your profile is available at:"
   decidim:
+    admin:
+      user_group:
+        verify:
+          confirmation_pending: The group's email address has to be confirmed in order to verify the group.
     components:
       privacy:
         name: Privacy settings
@@ -111,6 +115,11 @@ en:
           do_not_agree: No, I do not want to make my profile public
       publish_account:
         unauthorized: Only participants with public profiles are allowed to perform this action.
+      groups:
+        create:
+          email_confirmation: Group successfully created! Please check the group's email address for a verification message to verify the group's email address.
+        verify:
+          email_confirmation: The group's email address has to be confirmed in order to verify the group.
     profile:
       private: Private participant
       private_info_html: <i>This participant has decided to make their profile private. New messages to this conversation have been therefore disabled.</i>
