Clarify the English message for group creation success

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -113,7 +113,7 @@ en:
         unauthorized: Only participants with public profiles are allowed to perform this action.
       groups:
         create:
-          email_confirmation: Group successfully created! Please check the group's email address for a verification message to verify the group's email address.
+          email_confirmation: Group successfully created! Please verify the group's email address by clicking the link included in the verification email message in order to act on behalf of the group on this platform.
         verify:
           email_confirmation: The group's email address has to be confirmed in order to verify the group.
     profile:
