--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -82,6 +82,17 @@ en:
       private_account:
         unnamed_user: Unnamed participant
       partials:
+        anonymity_prompt:
+          title: Profile publicity
+          close_modal: Close
+          content_html: |
+            <p>
+              Your profile on this platform is anonymous by default. The ideas and comments you post will
+              appear as anonymous to others. If you want to act publicly, select the option "I want my profile
+              to be public" below.
+            </p>
+          continue: Continue anonymous
+          publicize: I want to make my profile public
         privacy_consent:
           make_profile_public: Make your profile public
           content_html: |
