--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -67,18 +67,32 @@ en:
           error: There was a problem updating your privacy settings.
           success: Your privacy settings were successfully updated.
       privacy_block:
-        title: Public profile is required for this action
-        content_html: |
-          <p class="text-center">
-            You are trying to access a page which requires your profile to be public. Making your profile public allows
-            other participants to see information about you.
-          </p>
-          <p class="text-center">
-            <strong>
-              Additional information about making your profile public will be presented after clicking the button below.
-            </strong>
-          </p>
-        button: "Publish your profile"
+        private:
+          title: Public profile is required for this action
+          content_html: |
+            <p class="text-center">
+              You are trying to access a page which requires your profile to be public. Making your profile public allows
+              other participants to see information about you.
+            </p>
+            <p class="text-center">
+              <strong>
+                Additional information about making your profile public will be presented after clicking the button below.
+              </strong>
+            </p>
+          button: "Publish your profile"
+        anonymous:
+          title: Your profile is anonymous
+          content_html: |
+            <p class="text-center">
+              You are entering a page anonymously. If you want other participants to see information about you,
+              you can also make your profile public.
+            </p>
+            <p class="text-center">
+              <strong>
+                Additional information about making your profile public will be presented after clicking the button below.
+              </strong>
+            </p>
+          button: "Continue"
       private_account:
         unnamed_user: Unnamed participant
       partials:
